--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -4,29 +4,30 @@
              x:Class="MauiAppHotel.Views.ContratacaoHospedagem"
              Title="ContratacaoHospedagem"
              NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             BackgroundColor="{StaticResource Black}">
 
     <VerticalStackLayout VerticalOptions="CenterAndExpand"
                          Padding="10"
                          Spacing="10">
 
         <Label Text="Cálculo da Diária"
-               FontFamily="Kalam"
-               FontSize="50"
-               TextColor="{StaticResource Primary}" />
+               FontFamily="Nunito"
+               FontSize="40"
+               TextColor="{StaticResource VerdeMusgo}" />
 
-        <Frame Padding="10">
+        <Frame Padding="10" BackgroundColor="{StaticResource VerdeMusgo}">
             <VerticalStackLayout>
-                <Grid RowDefinitions="Auto, Auto"
+                <Grid BackgroundColor="{StaticResource VerdeMusgo}"
+                      RowDefinitions="Auto, Auto"
                       ColumnDefinitions="*, *, 2*">
 
                     <Label Grid.Row="0" Grid.Column="0"
                            Text="Adultos:" />
 
                     <Label Grid.Row="0" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
+                           TextColor="{StaticResource Black}"
                            Text="{Binding Value}"
-                           BindingContext="{x:Reference stp_adultos}"/>
+                           BindingContext="{x:Reference stp_adultos}" />
 
                     <Stepper Grid.Row="0" Grid.Column="2"
                              x:Name="stp_adultos"
@@ -38,9 +39,9 @@
                            Text="Crianças:" />
 
                     <Label Grid.Row="1" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
+                           TextColor="{StaticResource Black}"
                            Text="{Binding Value}"
-                           BindingContext="{x:Reference stp_criancas}"/>
+                           BindingContext="{x:Reference stp_criancas}" />
 
                     <Stepper Grid.Row="1" Grid.Column="2"
                              x:Name="stp_criancas"
@@ -48,50 +49,57 @@
                              Maximum="10"
                              Increment="1" />
                 </Grid>
-
-                <Frame Padding="10" Margin="10">
-                    <VerticalStackLayout>
-
-                        <Label Text="Escolha sua Suíte"
-                               TextTransform="Uppercase"
-                               FontSize="Subtitle"
-                               TextColor="{StaticResource Primary}"/>
-
-                        <Picker x:Name="pck_quarto"
-                                Title="Selecione sua Acomodação"
-                                ItemDisplayBinding="{Binding Descricao}"/>
-                    </VerticalStackLayout>
-                </Frame>
-
-                <Frame Padding="10"
-                       Margin="10">
-                    <VerticalStackLayout Spacing="10">
-
-                        <Label Text="Período da Estadia"
-                               TextTransform="Uppercase"
-                               FontSize="Subtitle"
-                               TextColor="{StaticResource Primary}"/>
-
-                        <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                            <Label Text="Check-in:" />
-                            <DatePicker x:Name="dtpck_checkin"
-                                        DateSelected="dtpck_checkin_DateSelected"
-                                        Format="dd/MM/yyyy" />
-                        </HorizontalStackLayout>
-
-                        <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                            <Label Text="Check-out:" />
-                            <DatePicker x:Name="dtpck_checkout"
-                                        Format="dd/MM/yyyy" />
-                        </HorizontalStackLayout>
-                    </VerticalStackLayout>
-                </Frame>
-
-                <Button Text="Avançar" Clicked="Button_Clicked"   />
-
             </VerticalStackLayout>
         </Frame>
 
+        <Frame Padding="10" Margin="10" BackgroundColor="{StaticResource VerdeMusgo}">
+            <VerticalStackLayout>
+                <Label Text="Escolha sua Suíte"
+                       TextTransform="Uppercase"
+                       FontSize="Subtitle"
+                       TextColor="{StaticResource Black}" />
+
+                <Picker x:Name="pck_quarto"
+                        Title="Selecione sua Acomodação"
+                        ItemDisplayBinding="{Binding Descricao}" />
+            </VerticalStackLayout>
+        </Frame>
+
+        <Frame Padding="10" Margin="10" BackgroundColor="{StaticResource VerdeMusgo}">
+            <VerticalStackLayout Spacing="10">
+                <Label Text="Período da Estadia"
+                       TextTransform="Uppercase"
+                       FontSize="Subtitle"
+                       TextColor="{StaticResource Black}" />
+
+                <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+                    <Label Text="Check-in:" />
+                    <DatePicker x:Name="dtpck_checkin"
+                                DateSelected="dtpck_checkin_DateSelected"
+                                Format="dd/MM/yyyy" />
+                </HorizontalStackLayout>
+
+                <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+                    <Label Text="Check-out:" />
+                    <DatePicker x:Name="dtpck_checkout"
+                                Format="dd/MM/yyyy" />
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
+        </Frame>
+
+        <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
+            <Button Text="Ver Regras"
+        Clicked="OnVerRegrasClicked"
+        WidthRequest="150"
+        BackgroundColor="{StaticResource VerdeMusgo}"
+        TextColor="White" />
+
+            <Button Text="Avançar"
+            Clicked="Button_Clicked"
+            WidthRequest="150"
+            BackgroundColor="{StaticResource VerdeMusgo}"
+            TextColor="White" />
+        </HorizontalStackLayout>
     </VerticalStackLayout>
 
 </ContentPage>
